fixxxxx text wrap

--- a/public/css/hal1.css
+++ b/public/css/hal1.css
@@ -277,7 +277,7 @@ a {
 
 #news .desc-right {
     width: 80%;
-    height: 4.8em;
+    height: 3em;
     overflow: hidden;
 }
 
